Fix menu overflowing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -62,7 +62,7 @@ body {
 
 .navbar-dark.navbar > .version {
     color: white;
-    margin-left: 2rem;
+    padding-left: 1rem;
     font-style: italic;
 }
 
